--- a/my-gateway/config/gateway.config.yml
+++ b/my-gateway/config/gateway.config.yml
@@ -42,7 +42,7 @@ pipelines:
             message: "user ${req.method}"
       - jwt:
           action:
-            secretOrPublicKey: "the-secret-key"
+            secretOrPublicKey: "smilegate_stove_jjang_jae_meet_dda"
             checkCredentialExistence: false
       - proxy:
           - action:
