--- a/email-node/package.json
+++ b/email-node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "email-node",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mysql2": "^2.3.2",
+    "nodemailer": "^6.7.2",
     "redis": "^4.0.1"
   }
 }
